Package movement, A* fix